adjusted divs to their homes, added placeholder text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 <body>
   <header>Dice game : a Matt and Axa original</header>
-  <div id="score-container"></div>
-  <div id="roll-tracker-container"></div>
+  <div id="score-container">
+     <p id="score-text">Score : 0 </p>
+    </div>
+  <div id="roll-tracker-container">
+    <ul>Da rules
+      <li>If you roll a X: ...</li>
+      <li>If you roll a X: ...</li>
+      <li>If you roll a X: ...</li>
+      <li>If you roll a X: ...</li>
+      <li>If you roll a X: ...</li>
+      <li>If you roll a X: ...</li>
+    </ul>
+  </div>
   <div id="dice-board-container">
     <div id="die"></div>
   </div>
